radware/eladgo/labs/animals_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-animalsapp1
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: animals-52-214-207-197.nip.io
      http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bear-svc
              port:
                 number: 80
                 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-animalsapp2
spec:
  ingressClassName: nginx
  rules:
    - host: animals-52-214-207-197.nip.io
      http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: moose-svc
              port:
                 number: 80
